# db_prospection

./: .gitignore  api.py  config.py  error.txt  main.py  main_BF.py  main_BF_frozen.py  pyproject.toml  teste.py
src/api/: agendor.py  elevenlabs.py  firebase.py  picwish.py  request.py  videoai.py  zapi.py
src/auth/: header.py  login.py
src/database/: mongo.py
src/handlers/: client.py  log.py  product.py  session.py
src/helpers/: analytics.py  async_object.py  audio.py  auth.py  color.py  date.py  download.py  exceptions.py  image.py  is_.py  make_template.py  maps.py  message.py  narration.py  ner.py  nlp.py  pathobject.py  phone.py  regex.py  string.py  validate.py
src/helpers/gpt/: __init__.py  speech.py  utility.py
src/models/: analytics.py  client.py  models.py  niches.py  orders.py  zapi.py
src/routes/: assets.py  client.py  design.py  template.py
utils/: agendor.py  logging_config.py  zapi.py
